--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,7 @@
 :root {
   --background-color: #f0ecec;
   --font-color: #16181b;
+  --font-color-gray: #5c5c5c;
   
   --viewport-medium: 900px;
   --viewport-large: 1200px;
@@ -21,6 +22,7 @@
 .dark-mode {
   --background-color: #16181b;
   --font-color: #f8f8f8;
+  --font-color-gray: #acacac;
 }
 
 body {
