feat: Photography index page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,8 @@
   --viewport-medium: 900px;
   --viewport-large: 1200px;
 
+  --max-width-large: 1440px;
+
   --transition-timing: cubic-bezier(.4, 0, .2, 1);
 }
 
