--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,24 +9,14 @@
 }
 
 :root {
-  --background-color: #f0ecec;
+  --background-color: #ebeae8;
   --font-color: #16181b;
   --font-color-gray: #5c5c5c;
   --image-background-color: #dbdbdb;
   
-  --viewport-medium: 900px;
-  --viewport-large: 1200px;
-
   --max-width-large: 1440px;
 
   --transition-timing: cubic-bezier(.4, 0, .2, 1);
-}
-
-.dark-mode {
-  --background-color: #16181b;
-  --image-background-color: #202328;
-  --font-color: #f8f8f8;
-  --font-color-gray: #acacac;
 }
 
 body {
